--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.2.0",
-    "@types/pg": "^8.15.5"
+    "@types/pg": "^8.15.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@slack/bolt": "^4.4.0",
+    "@slack/web-api": "^7.5.0",
     "bree": "^9.2.4",
     "dotenv": "^17.2.1",
     "fast-csv": "^5.0.5",
     "openai": "^5.11.0",
-    "pg": "^8.16.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "pg": "^8.16.3"
   }
 }
