--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Slack Bot Configuration
 SLACK_BOT_TOKEN=xoxb-your-bot-token-here
 SLACK_SIGNING_SECRET=your-signing-secret-here
+# OAuth credentials (needed for installing app in new workspaces)
+SLACK_CLIENT_ID=your-client-id-here
+SLACK_CLIENT_SECRET=your-client-secret-here
 
 # PostgreSQL Database Configuration
 DATABASE_URL=postgresql://username:password@localhost:5432/helper_matcher
