--- a/slack-app-manifest.json
+++ b/slack-app-manifest.json
@@ -22,6 +22,8 @@
         "im:write",
         "users:read",
         "channels:read",
+        "groups:read",
+        "conversations:read",
         "commands"
       ]
     }
