--- a/slack-app-manifest.json
+++ b/slack-app-manifest.json
@@ -20,6 +20,7 @@
       "bot": [
         "chat:write",
         "im:write",
+        "files:write",
         "users:read",
         "channels:read",
         "groups:read",
