--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "channel-summaries": "ts-node src/jobs/channel-summaries.ts",
     "rebuild-person-skills": "ts-node src/jobs/rebuild-person-skills.ts",
     "audit-person-skills": "ts-node src/scripts/audit-person-skill-rebuild.ts",
+    "backfill-message-embeddings": "ts-node src/scripts/backfill-message-embeddings.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
