--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^24.2.0",
     "@types/pg": "^8.15.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "dependencies": {
